# technical-interview

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
challenge/: assignment_instructions.md
